--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.5"
+    "tailwindcss-animate": "^1.0.7",
+    "animated-tailwindcss": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
