--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/date-picker": "^2.1.6",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "animated-tailwindcss": "^4.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.439.0",
-    "next": "^14.2.8",
+    "next": "^14.2.6",
     "react": "^18.3.1",
+    "react-day-picker": "^9.0.8",
     "react-dom": "^18.3.1",
+    "react-popover": "^0.5.10",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7",
-    "animated-tailwindcss": "^4.0.0"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -33,7 +38,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
     "postcss": "^8.4.45",
-    "tailwindcss": "^3.4.10",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.5.4"
   }
 }
